fix: zip code type

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 							<div class="input-field">
 								<label>Zip Code</label>
-								<input type="number" placeholder="Enter zip code" required />
+								<input type="text" placeholder="Enter zip code" required />
 							</div>
 						</div>
 					</div>
